Fixed the images, better alignment overall.

--- a/FlatStore/www/css/style.css
+++ b/FlatStore/www/css/style.css
@@ -1,1 +1,4 @@
 /* Empty. Add your own CSS if you like */
+.thumbnail-row {
+	margin-left: 0px;
+}
